<resources>
    <string name="app_name">Home Database</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_barcode_scanner">barcode_scanner</string>
    <string name="ok">Ok</string>
    <string name="test_string">Test string</string>
    <string name="no_items">Nothing here, try adding some items</string>
    <string name="title_activity_login">Login</string>
    <string name="item_name">Item name</string>
    <string name="item_quantity">Item quantity</string>
    <string name="add_dialog_button">Add</string>
    <string name="add_dialog_cancel">Cancel</string>
    <string name="item_name_hint">Item name</string>
    <string name="item_quantity_hint">Item quantity</string>
    <string name="sign_out">Sign Out</string>
    <string name="exit_app">Exit app</string>
    <string name="get_data_server">Getting data from server</string>
    <string name="login_error">Error in log-in. Please try again</string>
    <string name="no_network">No network connection, try again later.</string>
    <string name="refused_camera">Permission denied to use camera</string>
    <string name="af_error">If autofocus doesn\'t work, tap on screen once</string>
    <string name="card_category_separator"><![CDATA[>]]></string>
    <string name="card_default_category">Comida</string>
    <string name="item_label">Item label</string>
    <string name="card_default_subcategory">Bolachas</string>
    <string name="card_default_quantity">4</string>
    <string name="card_default_barcode">91233452</string>
    <string name="long_test_string">Very long test string to test limits</string>
    <string name="no_categories_db">No categories found, try again later</string>
    <string name="add_item_already_exists_error">Item already exists</string>
    <string name="add_item_invalid_name">Invalid item name</string>
    <string name="add_item_invalid_number">Invalid item quantity</string>
    <string name="invalid_barcode">Invalid barcode number</string>
    <string name="barcode_hint">Barcode</string>
    <string name="add_dialog_check_item">Check item</string>
    <string name="item_update">Updated item</string>
    <string name="item_delete_confirmation">De certeza que pretende apagar item?</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="app_scan_barcode">Scan barcode</string>
</resources>
